# ROBOassignment2

./: CMakeLists.txt  README.md  README.txt  package.xml
include/: PLACEHOLDER.txt  follow_wall.h
src/: PLACEHOLDER.txt  follow_wall.cpp  main.cpp
stdr_files/stdr_launchers/launch/: PLACEHOLDER.txt  assignment2_d20_a0.launch  assignment2_d20_a135.launch  assignment2_d20_a180.launch  assignment2_d20_a45.launch  assignment2_d20_a90.launch  assignment2_d40_a0.launch  assignment2_d40_a135.launch  assignment2_d40_a180.launch  assignment2_d40_a45.launch  assignment2_d40_a90.launch  assignment2_d60_a0.launch  assignment2_d60_a135.launch  assignment2_d60_a180.launch  assignment2_d60_a45.launch  assignment2_d60_a90.launch
stdr_files/stdr_resources/maps/: PLACEHOLDER.txt  assign2_res0.01_d20_a0.yaml  assign2_res0.01_d20_a135.yaml  assign2_res0.01_d20_a180.yaml  assign2_res0.01_d20_a45.yaml  assign2_res0.01_d20_a90.yaml  assign2_res0.01_d40_a0.yaml  assign2_res0.01_d40_a135.yaml  assign2_res0.01_d40_a180.yaml  assign2_res0.01_d40_a45.yaml  assign2_res0.01_d40_a90.yaml  assign2_res0.01_d60_a0.yaml  assign2_res0.01_d60_a135.yaml  assign2_res0.01_d60_a180.yaml  assign2_res0.01_d60_a45.yaml  assign2_res0.01_d60_a90.yaml  map_res0.01_d20_a0.yaml  map_res0.01_d20_a135.yaml  map_res0.01_d20_a180.yaml  map_res0.01_d20_a45.yaml  map_res0.01_d20_a90.yaml
stdr_files/stdr_resources/resources/robots/: PLACEHOLDER.txt  assign2_robot.xml  assign2_robot.yaml  assignment2_robot.xml  assignment2_robot.yaml
