<?xml version="1.0"?>
<package format="2">
  <name>robo_assign2</name>
  <version>0.0.0</version>
  <description>The robo_assign2 package</description>

  <maintainer email="up201503717@fe.up.pt">Ricardo Carvalho</maintainer>
  <maintainer email="up201503447@fe.up.pt">Vitor Magalhães</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>stdr_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
